Added attributes for better identification of plane components